--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
+    <!-- Aula 8  https://www.youtube.com/watch?v=4GiSWfTUXmA&list=PLaP4boae327DncqDRdZ9ylwMsM0MOzF9J&index=7 -->
     <link href="css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Forum Forex Brasil</title>
 
 
     <style>
@@ -28,117 +28,135 @@
 <body>
 
     <nav class="navbar navbar-dark bg-dark">
-        <div class="container-fluid">
+        <div class="container">
             <a class="navbar-brand">Forum</a>
             <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <input class="form-control mr-3 mb-2 mb-sm-0"  type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
         </div>
     </nav>
 
-    <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item active" aria-current="page">Home</li>
-        </ol>
-    </nav>
+    <div class="container my-3">
+        <nav class="bg-light" aria-label="breadcrumb mb-2">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item active" aria-current="page">Home</li>
+            </ol>
+        </nav>
+
+        <div class="row">
+            <div class="col-12 col-xl-9">
+                <h2 class="h4 text-white bg-danger mb-0 p-4 rounded-top">Forum Category</h2>
+                <table class="table table-striped table-bordered table-responsive">
+                    <thead class="thead-light">
+                        <tr>
+                            <th scope="col" class="forum-col">Forum</th>
+                            <th scope="col">Topics</th>
+                            <th scope="col">Posts</th>
+                            <th scope="col" class="last-post-col">Last post</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>
+                                <h3 class="h5 mb-0"><a href="#0" class="text-uppercase">Forum name</a></h3>
+                                <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. distinctio!</p>
+                            </td>
+                            <td>
+                                <div>5</div>
+                            </td>
+                            <td>
+                                <div>18</div>
+                            </td>
+                            <td>
+                                <h4 class="h6"> <a href="">Post name</a></h4>
+                                <div>By <a href="">Author name</a></div>
+                                <div>05 Abril 2014, 20:13</div>
+                            </td>
 
 
-    <h2 class="h4">Forum Category</h2>
-    <table class="table table-striped table-bordered table-responsive">
-        <thead class="thead-light">
-            <tr>
-                <th scope="col" class="forum-col">Forum</th>
-                <th scope="col">Topics</th>
-                <th scope="col">Posts</th>
-                <th scope="col" class="last-post-col">Last post</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>
-                    <h3 class="h5"><a href="#0">Forum name</a></h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. distinctio!</p>
-                </td>
-                <td>
-                    <div>5</div>
-                </td>
-                <td>
-                    <div>18</div>
-                </td>
-                <td>
-                    <h4 class="h6"> <a href="">Post name</a></h4>
-                    <div>By <a href="">Author name</a></div>
-                    <div>05 Abril 2014, 20:13</div>
-                </td>
+                        </tr>
 
+                    </tbody>
+                </table>
+            </div>
 
-            </tr>
+            <div class="col-12 col-xl-3">
+                <aside>
+                    <div class="row">
+                        <div class="col-12 cl-sm-6 col-xl-12">
+                            <div class="card mb-3 mb-sm-0 mb-xl-3">
+                                <div class="card-body">
+                                    <h2 class="h4 card-title">Members online</h2>
+                                    <ul class="list-unstyled mb-0">
+                                        <li><a href="">Forum member name</a></li>
+                                        <li><a href="">Forum member name</a></li>
+                                        <li><a href="">Forum member name</a></li>
+                                        <li><a href="">Forum member name</a></li>
+                                        <li><a href="">Forum member name</a></li>
+                                        <li><a href="">Forum member name</a></li>
+                                        <li><a href="">Forum member name</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="card-footer">
+                                <dl class="row mb-0">
+                                    <dt class="col-8">Total:</dt>
+                                    <dd class="col-4 mb-0">10</dd>
+                                </dl>
+                                <dl class="row mb-0">
+                                    <dt class="col-8">Members:</dt>
+                                    <dd class="col-4 mb-0">8</dd>
+                                </dl>
+                                <dl class="row mb-0">
+                                    <dt class="col-8">Guests:</dt>
+                                    <dd class="col-4 mb-0">3</dd>
+                                </dl>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 cl-sm-6 col-xl-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <h2 class="h4">Forum statistics</h2>
+                                <dl class="row mb-0">
+                                    <dt class="col-8">Total Forums:</dt>
+                                    <dd class="col-4 mb-0">15</dd>
+                                </dl>
+                                <dl class="row mb-0">
+                                    <dt class="col-8">Total Topics:</dt>
+                                    <dd class="col-4 mb-0">15452</dd>
+                                </dl>
+                                <dl class="row mb-0">
+                                    <dt class="col-8">Total Members:</dt>
+                                    <dd class="col-4 mb-0">542</dd>
+                                </dl>
+                                <div class="card-footer">
+                                    <div>Newest member:</div>
+                                    <div><a href="">Forum member name</a></div>
+                                </div>
 
-        </tbody>
-    </table>
+                            </div>
+                        </div>
+                    </div>
 
-    <aside>
-        <div class="card">
-            <div class="card-body">
-                <h2 class="h4 card-title">Members online</h2>
-                <ul class="list-unstyled">
-                    <li><a href="">Forum member name</a></li>
-                    <li><a href="">Forum member name</a></li>
-                    <li><a href="">Forum member name</a></li>
-                    <li><a href="">Forum member name</a></li>
-                    <li><a href="">Forum member name</a></li>
-                    <li><a href="">Forum member name</a></li>
-                    <li><a href="">Forum member name</a></li>
-                </ul>
+                </aside>
             </div>
         </div>
-        <div class="card-footer">
-            <dl>
-                <dt>Total:</dt>
-                <dd>10</dd>
-            </dl>
-            <dl>
-                <dt>Members:</dt>
-                <dd>8</dd>
-            </dl>
-            <dl>
-                <dt>Guests:</dt>
-                <dd>3</dd>
-            </dl>
+    </div>
+    </div>
+
+
+
+    <footer class="small bg-dark text-white">
+        <div class="container py-4">
+            <ul class="list-inline mb-0 text-center">
+                <li class="list-inline-item">&copy; 2022 Forum Forex Brasil</li>
+                <li class="list-inline-item"> All rights reserved</li>
+
+                <li class="list-inline-item"><a href="">Terms of use and privacy policy</a> </li>
+            </ul>
         </div>
-        <div class="card">
-            <div class="card-body">
-                <h2 class="h4">Forum statistics</h2>
-
-                <dl>
-                    <dt>Total Forums:</dt>
-                    <dd>15</dd>
-                </dl>
-                <dl>
-                    <dt>Total Topics:</dt>
-                    <dd>15452</dd>
-                </dl>
-                <dl>
-                    <dt>Total Members:</dt>
-                    <dd>542</dd>
-                </dl>
-                <div class="card-footer">
-                    <div>Newest member:</div>
-                    <div><a href="">Forum member name</a></div>
-                </div>
-
-            </div>
-        </div>
-    </aside>
-
-    <footer class="small">
-        <ul class="linst-inline">
-            <li class="list-inline-item">&copy; 2022 Forum Forex Brasil</li>
-            <li class="list-inline-item"> All rights reserved</li>
-          
-            <li class="list-inline-item"><a href="">Terms of use and privacy policy</a> </li>
-        </ul>
     </footer>
 
 
